--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
         "docker": "pnpm docker:build && pnpm docker:run && pnpm docker:bash",
         "test": "bash ./scripts/test.sh",
         "smokeTests": "bash ./scripts/smokeTests.sh",
-        "integrationTests": "bash ./scripts/integrationTests.sh"
+        "integrationTests": "bash ./scripts/integrationTests.sh",
+        "start:pm2": "pm2 start ./scripts/start-sage.sh --name sage",
+        "stop:pm2": "pm2 stop sage",
+        "logs:pm2": "pm2 logs sage"
     },
     "devDependencies": {
         "@commitlint/cli": "18.6.1",
@@ -46,7 +49,8 @@
     },
     "pnpm": {
         "overrides": {
-            "onnxruntime-node": "1.20.1"
+            "onnxruntime-node": "1.20.1",
+            "@elizaos/adapter-postgres": "workspace:*"
         }
     },
     "engines": {
